syntax = "proto3";

package encoding_lab;

option java_multiple_files = true;
option java_package = "com.maxym.grpc";

service MessageService {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  string message = 1;
}

message MessageResponse {
  string response = 1;
}